
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

MODX Revolution 3.0.0-beta1  (TBD)
====================================
- Lock setup after it is successfully executed [#14692]
- Generate sortable tag signature with serialized array values [#14689]
- Escape instances of new MySQL reserved word rank [#14705]
- Fix broken avatar when default media source is modified [#14544]
- Define IMG_WEBP constant in version of PHP without it [#14647]
- Setup redesign [#14507]
- Add widget welcome dashboard changes [#14607]
- Media browser reload [#14570]
- Fixed bug for checking the table prefix while installing MODX [#14543]
- Refactor model for xPDO 3.x and PSR-4 autoloading [#14534]
- Automatically marking required fields by an asterisk [#14522]
- Using a single pattern for elements action buttons like for resources [#14463]
- A status notification is shown when optimizing the database via System Information [#14525]
- Fixes an issue that would cause no results to display when using spaces before/after a search term in the search field [#14523]
- System Information now shows the correct version numbers of Smarty and PHPMailer [#14517]
- The minimum required PHP version for MODX is PHP 7.0 [#14488]
- If you edit a resource and at the same time move it in the tree through drag and drop the menuindex will now stay in sync [#14423]
- Alter modUserProfile gender field to tinyint from int [#14412]
- Return empty string for empty xml tag in modRestService [#14305]
- Missing file size translation and proper description for selected files in Media Source Browser [#14360]
- Change default values of automatic template assignment, tree node name fallback, and preserve menuindex system settings [#14328]
- Added normalize.css [#14369]
- Adds check for tree render on Access Control Lists page [#14451]