@@ -29,6 +29,16 @@ abstract class Update extends modObjectUpdateProcessor
     /** @var modElement $object */
     public $object;
 
+    public function beforeSet()
+    {
+        // Make sure the element isn't locked
+        if ($this->object->get('locked') && !$this->modx->hasPermission('edit_locked')) {
+            return $this->modx->lexicon($this->objectType . '_err_locked');
+        }
+
+        return parent::beforeSet();
+    }
+
     public function beforeSave()
     {
         $locked = $this->getProperty('locked');
@@ -37,7 +47,7 @@ abstract class Update extends modObjectUpdateProcessor
         }
 
         /* make sure a name was specified */
-        $nameField = $this->classKey == modTemplate::class ? 'templatename' : 'name';
+        $nameField = $this->classKey === modTemplate::class ? 'templatename' : 'name';
         $name = $this->getProperty($nameField, '');
         if (empty($name)) {
             $this->addFieldError($nameField, $this->modx->lexicon($this->objectType . '_err_ns_name'));
@@ -47,11 +57,6 @@ abstract class Update extends modObjectUpdateProcessor
                 $this->modx->error->addField($nameField,
                     $this->modx->lexicon($this->objectType . '_err_ae', ['name' => $name]));
             }
-        }
-
-        /* if element is locked */
-        if ($this->object->get('locked') && $this->modx->hasPermission('edit_locked') == false) {
-            $this->addFieldError($nameField, $this->modx->lexicon($this->objectType . '_err_locked'));
         }
 
         /* category */
@@ -86,7 +91,7 @@ abstract class Update extends modObjectUpdateProcessor
 
     public function alreadyExists($name)
     {
-        $nameField = $this->classKey == modTemplate::class ? 'templatename' : 'name';
+        $nameField = $this->classKey === modTemplate::class ? 'templatename' : 'name';
 
         return $this->modx->getCount($this->classKey, [
                 'id:!=' => $this->object->get('id'),
